# gelfgren

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PYTHON_BINDINGS_SUMMARY.md  README.md  traub.ltx
.claude/: settings.local.json
.github/workflows/: bindings-cpp.yml  bindings-fortran.yml  bindings-go.yml  bindings-haskell.yml  bindings-java.yml  bindings-julia.yml  bindings-lisp.yml  bindings-mercury.yml  bindings-ocaml.yml  bindings-prolog.yml  bindings-python.yml  bindings-r.yml  bindings-ruby.yml  bindings-scheme.yml  bindings-sml.yml  release.yml  rust-core.yml
benchmarks/: BENCHMARK_REPORT_UPDATE.md  Cargo.toml  EXTENDED_BENCHMARK_SUMMARY.md  FAIR_COMPARISON_ANALYSIS.md  README.md  SPECIAL_FUNCTIONS_SUMMARY.md  bvp.rs  lib.rs  special_functions.rs
benchmarks/bvp/: poisson_1d.rs
benchmarks/data/: Discontinuous_Poisson.json  Oscillatory_Poisson_ω=10.0.json  Smooth_Poisson_sin.json  bvp_method_comparison.json  bvp_rational_collocation_benchmark.json  degree_strategy_convergence.json
benchmarks/data/extended_benchmark/: condensed_benchmark_results.json
benchmarks/data/special_functions/: Airy_Aix_oscillatory.json  Airy_Bix_exponential.json  Bessel_J_10x.json  Bessel_J_1x.json  Bessel_J_5x.json  Cosine_cosx.json  Error_function_erfx.json  Exponential_e^x.json  Exponential_ex.json  Jacobi_cnx,_k=0.9.json  Jacobi_snx,_k=0.5.json  Lemniscate_slx.json  Logarithm_log1+x.json  Logarithm_log1plusx.json  Mathieu_ce_0x,_q=5.json  Mathieu_se_2x,_q=10.json  Runges_function_1_over_1plus25x2.json  Sine_sinx.json
benchmarks/data/special_functions_fair/: Airy_Aix_oscillatory.json  Airy_Bix_exponential.json  Bessel_J_10x.json  Bessel_J_1x.json  Bessel_J_5x.json  Cosine_cosx.json  Error_function_erfx.json  Exponential_e^x.json  Jacobi_cnx_k=0.9.json  Jacobi_snx_k=0.5.json  Lemniscate_slx.json  Logarithm_log1+x.json  Mathieu_ce_0x_q=5.json  Mathieu_se_2x_q=10.json  Runge's_function_1_1+25x².json  Sine_sinx.json
benchmarks/python/: analyze_results.py  analyze_special_functions.py  bvp_convergence.py  bvp_rational_collocation_benchmark.py  compare_bvp_methods.py  degree_strategy_convergence.py  generate_extended_report.py  generate_latex_report.py  generate_solution_plots.py  rational_collocation.py  rational_collocation_cleared.py  rational_hermite_fixed.py  rational_hermite_interpolation.py  run_condensed_benchmark.py  run_extended_benchmark.py  special_function_convergence.py  special_function_convergence_fair.py  test_critical_failure.py  test_extended_benchmark.py  test_rational_constraints.py
benchmarks/python/problems/: advection_diffusion_problems.py  helmholtz_problems.py  problem_types.py  reaction_diffusion_problems.py  variable_coefficient_problems.py
benchmarks/python/solvers/: finite_differences.py  spectral_collocation.py
benchmarks/reports/figures/extended_benchmark/: analysis_summary.md
benchmarks/reports/latex/: comprehensive_benchmark_report.aux  comprehensive_benchmark_report.out  comprehensive_benchmark_report.tex  comprehensive_benchmark_report.tex.backup_20260214_214058  comprehensive_benchmark_report.toc  extended_chapters.tex  extended_chapters_clean.tex
benchmarks/special_functions/: approximations.rs
bindings/c/: CMakeLists.txt  basic_usage.c
bindings/cpp/: CMakeLists.txt  example.cpp  gelfgren.hpp
bindings/fortran/: Makefile  README.md  fpm.toml
bindings/go/: README.md  go.mod
bindings/haskell/: README.md  cabal.project  gelfgren.cabal
bindings/haskell/app/: Main.hs
bindings/haskell/src/: Gelfgren.hs
bindings/haskell/src/Gelfgren/: FFI.hs
bindings/haskell/test/Test/: Gelfgren.hs
bindings/java/: README.md  pom.xml
bindings/julia/: Project.toml  README.md
bindings/lisp/: README.md  gelfgren.asd
bindings/mercury/: Mmakefile  README.md
bindings/ocaml/: README.md  dune-project
bindings/ocaml/examples/: basic_usage.ml  dune
bindings/ocaml/lib/: dune  gelfgren.ml  gelfgren.mli  gelfgren_bindings.ml
bindings/ocaml/test/: dune  test_gelfgren.ml
bindings/prolog/: README.md  pack.pl
bindings/python/: Cargo.toml  PYTHON_BINDINGS_STATUS.md  README.md  example.py  pyproject.toml
bindings/python/src/: lib.rs
bindings/r/: DESCRIPTION  README.md
bindings/ruby/: Gemfile  README.md  Rakefile  gelfgren.gemspec
bindings/ruby/ext/gelfgren/: Cargo.toml  extconf.rb
bindings/ruby/ext/gelfgren/src/: lib.rs
bindings/scheme/: README.md
bindings/sml/: README.md  gelfgren.mlb
docs/: BVP_STATUS.md  CONSTRAINT_ENHANCEMENT.md  CONSTRAINT_IMPLEMENTATION_STATUS.md  CONSTRAINT_INTERFACES.md  CONSTRAINT_INTERFACE_COMPLETE.md  HERMITE_INTERPOLATION.md  IMPLEMENTATION_PLAN.md  PHASE_8_COMPLETE.md  PHASE_8_SUMMARY.md  RATIONAL_COLLOCATION_CLEARED_FORM.md  RATIONAL_COLLOCATION_IMPLEMENTATION.md  RATIONAL_COLLOCATION_METHODS.md  RATIONAL_COLLOCATION_QUADRATIC_FORM.md  RATIONAL_CONSTRUCTION_VERIFICATION.md  SUMMARY.md  TEST_RESULTS.md  TEST_SUITE_DESIGN.md  architecture.md  benchmarks.md  book.toml  getting-started.md  index.md  mathematics.md  papers-summary.md
examples/: constraint_interface_demo.py
gelfgren-core/: Cargo.toml
gelfgren-core/examples/: exponential_approximation.rs  rational_demo.rs  runge_function.rs
gelfgren-core/src/: error.rs  lib.rs
gelfgren-core/src/bernstein/: arithmetic.rs  calculus.rs  mod.rs  polynomial.rs
gelfgren-core/src/bvp/: boundary.rs  mod.rs  problem.rs  solver.rs
gelfgren-core/src/hermite/: bell.rs  interpolation.rs  mod.rs
gelfgren-core/src/linalg/: matrix.rs  mod.rs  vector.rs
gelfgren-core/src/numerical/: mod.rs
gelfgren-core/src/pade/: approximant.rs  bell_simplification.md  constraints.rs  linear_system.rs  mod.rs  symmetric.rs  two_point.rs
gelfgren-core/src/piecewise/: construction.rs  evaluation.rs  mesh.rs  mod.rs
gelfgren-core/src/rational/: arithmetic.rs  function.rs  gcd.rs  mod.rs
gelfgren-core/src/special/: mod.rs
gelfgren-core/src/stats/: mod.rs
gelfgren-ffi/: Cargo.toml  build.rs  cbindgen.toml
gelfgren-ffi/src/: bernstein.rs  bvp.rs  error.rs  hermite.rs  lib.rs  memory.rs  pade.rs  piecewise.rs  rational.rs  types.rs
packaging/nix/: default.nix  (+1 more)
(+42 files in other folders)
